@@ -1,0 +1,1 @@
+select * from testCtasWithOrderby order by key;
