@@ -1,0 +1,1 @@
+select * from lineitem where l_orderkey % 2 = 0;
