@@ -1,0 +1,7 @@
+col1,col2,key
+-------------------------------
+1,0,17.0
+1,0,36.0
+2,0,38.0
+3,0,45.0
+3,0,49.0
