@@ -1,0 +1,8 @@
+col1,col2,key
+-------------------------------
+1,0,17.0
+1,0,17.0
+1,0,36.0
+1,0,36.0
+2,0,38.0
+2,0,38.0
